Make badges bold to address legibility issues in ui-microapp

--- a/public/sass/_components.pxh-badge.scss
+++ b/public/sass/_components.pxh-badge.scss
@@ -36,7 +36,7 @@
   text-align: center;
   background-color: $gray5;
   display: inline-block;
-  font-weight: normal;
+  font-weight: bold;
   color: $white;
   line-height: 1;
   border-radius: 7px;
